# telegram

./: README.md
TelegramBOT/: .gitignore  config.json  config.json.example  pyproject.toml  requirements.txt  run.py  setup.py
TelegramBOT/SandyDesertedWearables/: ai_agent.py  main.py  performance_monitor.py  requirements.txt  tools.py
TelegramBOT/SandyDesertedWearables/attached_assets/: Pasted---1753384839675_1753384839678.txt
TelegramBOT/docs/: ai_instructions.md
TelegramBOT/docs/pasted_from_root/: Pasted---1753557564381_1753557564382.txt
TelegramBOT/docs/pasted_from_subfolder/: Pasted--Pro-AI-System-1-AI-Agent-Instruction-Script--1753385399068_1753385399070.txt  Pasted--Smart-Media-AI-Assistant-1753385743178_1753385743178.txt
TelegramBOT/src/: ai_agent.py  config_manager.py  handlers.py  keyboards.py  main.py  tools.py  utils.py  yt_dlp_wrapper.py
TelegramBOT/tests/: run_tests.py  tests.py
